MJ 17/09/05
- Cleanup of peersim.util package; mainly docs, but some bugfixes too
  eg in IncrementalFreq.equals. 
- new methods in GraphIO and GraphFactory

MJ 15/09/05
- Finishing the cleanup of the dynamics package
- Added WireByMethod which is quite powerful and flexible for wiring
  networks. We no longer need to define a separate Control for all different
  kinds of networks.

MJ 13/09/05
- Cleaned up the dynamics package. A noticable change that will break
  existing config files: GrowingNetwork is gone. Its functionality is
  provided by DynamicNetwork. A small change though: config par "percentage"
  is no longer supported, but you can set -1<add<1 which is taken as
  proportion. The "down" parameter is gone too: it was only a hack, that
  will maybe reincarnate in another class.
- renamed peersim.cdsim.Simulator to CDSimulator

MJ 11/09/05
- Some more classdocs cleanup, some refactoring of config property loading
- Added WireRegRootedTree that can wire a regular rooted tree

MJ 10/09/05
- Revised the vector package again, including some major refactoring and
  complete revision of documentation.
- Changed the behavior of the vector observers, now they accept only one method
  to observe. Simplicity wins here over features.

MJ 09/09/05
- Went through the classdocs of the cdsim package, and revised/fixed/extended
  it significantly. Planning to do it with all the packages... 
- Small changes in WireGraph to support non-overly graphs better (see classdocs)
- NeighbourListGraph can now be constructed with a specified size
- Some documentation fixes

MJ 29/08/05
- Added possibility to look up protocol names based on pid in Configuration.
  Error messages should use that method instead of dumping the pid.

MJ 28/08/05
- Fixed a bug in Scheduler: now all times are realy long
- Also longified the Transport interface
- Added transport to FastConfig

MJ 21/08/05
- some minor documentation fixes
- CDScheduler can now accept a list of protocols instead of only one
